# r-svn-packages

./: DESCRIPTION  configure.in
Devore5/: INDEX
Devore5/R/: dummy.R
Devore5/data/: ex01.12.txt  ex01.17.txt  ex01.19.txt  ex01.21.txt  ex01.24.txt  ex01.28.txt  ex01.29.txt  ex01.35.txt  ex01.37.txt  ex01.38.txt  ex01.45.txt  ex01.50.txt  ex01.63.txt  ex01.67.txt  ex01.70.txt  ex01.71.txt  ex01.73.txt  ex01.75.txt  ex01.78.txt  ex01.81.txt  ex04.84.txt  ex04.86.txt  ex04.87.txt  ex06.01.txt  ex06.02.txt  ex06.04.txt  ex06.05.txt  ex06.09.txt  ex06.25.txt  ex07.10.txt  ex07.26.txt  ex07.33.txt  ex07.43.txt  ex07.45.txt  ex07.56.txt  ex08.32.txt  ex08.53.txt  ex08.78.txt  ex09.25.txt  ex09.27.txt  (+21 more)
Devore5/man/: ex01.11.Rd  ex01.12.Rd  ex01.15.Rd  (+342 more)
KernSmooth/: DESCRIPTION  PORTING
MEMSS/: DESCRIPTION
Mac-GUI/: Info.plist  InfoPlist.h  NEWS  RController.h  RController.m  RGUI.h
Mac-GUI2/: Info.plist  RConsoleDocument.h  RConsoleDocument.m  RConsoleWinCtrl.h  RConsoleWinCtrl.m  RDocument.h  RDocument.m  RDocumentController.h  RDocumentController.m  RDocumentWinCtrl.h  RDocumentWinCtrl.m  RGUI.h  main.m
Matrix/: DESCRIPTION
NISTnls/: ChangeLog  DESCRIPTION  INDEX
NRAIA/: ChangeLog  DESCRIPTION  INDEX  NAMESPACE
Old/: README
R/: All.R
R-Tcl-win/: README
RCurl/: DESCRIPTION
RJSONIO/: DESCRIPTION  ReadMe
SASmixed/: INDEX
SQLiteDF/: ChangeLog  DESCRIPTION  HACKING  NAMESPACE  TODO  cleanup  configure  configure.win
Sweave/: DESCRIPTION  NAMESPACE  TODO
XML/: .Rbuildignore  ChangeLog  DESCRIPTION  NAMESPACE
_darcs/: inventory
adapt/: .Rbuildignore  ChangeLog  DESCRIPTION  INDEX  README  README-R
biglm/: DESCRIPTION
boot/: .Rbuildignore  ChangeLog  DESCRIPTION
cluster/: .Rbuildignore  ChangeLog  DESCRIPTION  DONE-MM  INDEX  INDEX-MM  NAMESPACE  README  TODO-MM  resort-INDEX
coda/: CHANGELOG  DESCRIPTION  INDEX  NAMESPACE
foreign/: COPYRIGHTS  ChangeLog  DESCRIPTION  INDEX  NAMESPACE  cleanup  configure  configure.ac  configure.win
foreign/R/: Sread.R  arff.R  dbf.R  minitab.R  read.dta.R  read.ssd.R  spss.R  writeForeignCode.R  writeForeignSAS.R  xport.R  zzz.R
foreign/inst/: COPYRIGHTS  LICENCE
foreign/inst/po/de/LC_MESSAGES/: R-foreign.mo  foreign.mo
foreign/inst/po/en@quot/LC_MESSAGES/: R-foreign.mo  foreign.mo
foreign/inst/po/fr/LC_MESSAGES/: R-foreign.mo  foreign.mo
foreign/inst/po/pl/LC_MESSAGES/: R-foreign.mo  foreign.mo
foreign/man/: dbf.read.Rd  dbf.write.Rd  read.S.Rd  read.arff.Rd  read.dbf.Rd  read.dta.Rd  read.spss.Rd  read.ssd.Rd  read.systat.Rd  write.arff.Rd  write.dbf.Rd  write.dta.Rd  write.foreign.Rd
foreign/po/: R-de.po  R-en@quot.po  R-foreign.pot  R-fr.po  R-pl.po  de.po  en@quot.po  foreign.pot  fr.po  pl.po
foreign/src/: R_systat.c  Rdbfread.c  Rdbfwrite.c  SASxport.c  dbfopen.c  foreign.h  init.c  minitab.c  pfm-read.c  sfm-read.c  sfmP.h  spss.c  stataread.c  swap_bytes.h  swap_bytes.h.in
foreign/tests/: S3.R  S3.Rout.save  minitab.Rout.save  sas.R  spss.R  spss.Rout.save  stata.R  stata.Rout.save  stata_download.R  writeForeignSPSS.Rout.save  xport.Rout.save
foreign/tests/keep/: codefile.sps
gnomeDevice/: DESCRIPTION  INDEX  configure.in
gnomeDevice/R/: gnome.R  zzz.R
gnomeDevice/src/: Makevars.in  devGNOME.c  devGNOME.h  devices.c  eventLoop.c  loadGNOME.c
gnomeGUI/: DESCRIPTION  system.c  system.h
gtkDevice/: CHANGELOG  DESCRIPTION  configure  configure.in
gtkDevice/R/: gtk.R  rubberBand.R  zzz.R
gtkDevice/inst/examples/: drawMotion.S  rubber.S
gtkDevice/man/: asGtkDevice.Rd  gtk.Rd
gtkDevice/src/: Makevars  devGTK.c  devGTK.h  devGTK2.c  devices.c  gdkrotated.c  gdkrotated.h  gdkrotated2.c  loadGTK.c  rubberband.c
man/: sqlite.data.frame.Rd
mgcv/: ChangeLog  DESCRIPTION  NAMESPACE  changeLog
mlmRev/: ChangeLog  DESCRIPTION
nlme/: ChangeLog  DESCRIPTION  INDEX  LICENCE  NAMESPACE
rcompgen/: ChangeLog  DESCRIPTION  SvnLog
rpart/: .Rbuildignore  ChangeLog  DESCRIPTION  LICENCE  NAMESPACE
src/: sqlite3.h  sqlite_dataframe.c  sqlite_dataframe.h  sqlite_vector.c  sqlite_workspace.c  utils.c
survival/: DESCRIPTION  NAMESPACE  Rchangelog
(+1675 files in other folders)
