AC_INIT(src/devices.c)

AC_CHECK_PROGS(GNOME_CONFIG, gnome-config)
if test -n "${GNOME_CONFIG}"; then
   GNOMEUI_CPPFLAGS=`${GNOME_CONFIG} --cflags gnomeui`
   GNOMEUI_LIBS=`${GNOME_CONFIG} --libs gnomeui`
else
   AC_CHECK_PROGS(PKG_CONFIG, pkg-config)
   if test -n "${PKG_CONFIG}"; then
      GNOMEUI_CPPFLAGS=`${PKG_CONFIG} --cflags gnomeui`
      GNOMEUI_LIBS=`${PKG_CONFIG} --libs gnomeui`
   else
      echo "ERROR: Cannot find pkg-config or gnome-config." 
      exit 1
   fi
fi

## Allow user to set extra preprocessor flags (e.g. -Wall)
GTK_CPPFLAGS=${PKG_CPPFLAGS}" "${GTK_CPPFLAGS}

AC_SUBST(GNOMEUI_CPPFLAGS)
AC_SUBST(GNOMEUI_LIBS)
AC_OUTPUT(src/Makevars)

